# stackpanel

./: .cursorrules  .dir-locals.el  .env.example  .envrc  .gitignore  .gitmodules  .neon  .nixd.json  .rules  .sops.yaml  .stackpanel-root  .zed  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEVENV_REMOVAL_PLAN.md  HOW_TO_USE_GROUPS.md  Justfile  README.md  README.tmpl.md  README_ORIGINAL.md  REFACTORING.md  SECRETS_REFACTOR.md  TODO.md  WARP.md  alchemy.run.d.ts  alchemy.run.js  alchemy.run.ts  biome.json  bts.jsonc  bun.nix  devenv.nix  devenv.yaml  devshell  flake.nix  go.mod  go.sum  issues.jsonl  om.yaml  oxlint.json  (+10 more)
.beads/: export-state.json  issues.jsonl  metadata.json
.claude/: settings.local.json
.cursor/: hooks.json
.github/: copilot-instructions.md
.mux/: tool_post
.ruler/: architecture.md  bts.md  development.md  nix-templating.md  ruler.toml  stackpanel.md  todo.md
.stack/: .gitignore  config.apps.nix  config.nix  devenv.nix
.stackpanel/: .gitignore  _internal.nix  config.local.nix.example  config.nix  config.nix.example  data.nix  devenv.nix
.zed/: settings.json
agent/: Makefile  README.md  agent.example.yaml  go.mod
apps/stackpanel-reload/: Cargo.toml  README.md
apps/stackpanel-reload/.stack/keys/: local.pub
apps/stackpanel-reload/src/: config.rs  main.rs  pty_manager.rs  reloader.rs  status_line.rs  terminal.rs  watcher.rs
doc/: refactor.md
docs/: ARCHITECTURE.md  COMPLEXITY_REDUCTION_ANALYSIS.md  CONFIG_EXAMPLE_GENERATION.md  DEPLOYMENT_FIX_CHECKLIST.md  DEPLOYMENT_MIGRATION.md  DEVENV_LEARNINGS.md  DEVENV_REMOVAL_PLAN.md  DEV_MODE.md  (+16 more)
(+2108 files in other folders)
